# ElysianCat-s-Discord-Bot-Template

./: .env.example  .gitignore  LICENSE.txt  README.md  logging_config.example.json  logging_config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
constants/: __init__.py  _meta.py  classes.py
enums/: __init__.py
exceptions/: __init__.py
logging_/: filters.py  formatters.py  handlers.py
structures/: __init__.py  _mixins.py  named_tuples.py  typed_dictionaries.py
tests/: test_add_private_attribute_decorator.py  test_bot_config_function.py  test_find_same_objects_function.py  test_flatten_dict_no_hierarchy_iterative_function.py  test_flatten_iterable_function.py  test_format_iterable_into_human_readable_string_function.py  test_is_hashable_function.py  test_is_palindrome_function.py  test_load_env_variables_function.py  test_load_logging_config_function.py  test_make_hashable_function.py  test_memoize_decorator.py  test_validate_input_decorator.py
types_/: __init__.py
utilities/: __init__.py  decorators.py  functions.py
